<resources>
    <string name="app_name">calendar_event_frontend</string>
    <string name="title_month">Month View</string>
    <string name="title_week">Week View</string>
    <string name="title_day">Day View</string>
    <string name="month_view">Month</string>
    <string name="week_view">Week</string>
    <string name="day_view">Day</string>
    <string name="search_events">Search Events</string>
    <string name="edit_event">Edit Event</string>
    <string name="add_event">Add Event</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="location">Location</string>
    <string name="reminder_minutes">Reminder (min)</string>

    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
</resources>
