<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data></data>
    <ScrollView
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/eventTitle"
                android:hint="@string/title"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/eventDescription"
                android:layout_marginTop="8dp"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/eventStart"
                android:focusable="false"
                android:layout_marginTop="8dp"
                android:hint="@string/start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/eventEnd"
                android:focusable="false"
                android:layout_marginTop="8dp"
                android:hint="@string/end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/eventLocation"
                android:layout_marginTop="8dp"
                android:hint="@string/location"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/reminderMinutes"
                android:layout_marginTop="8dp"
                android:hint="@string/reminder_minutes"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</layout>
